# moviesigdb

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/moviesigdb/: __init__.py  core.py  viz.py
