[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moviesigdb"
version = "0.1.0"
authors = [
  { name="Shreyan Banerjee", email="2006shreybanerjee@gmail.com" },
]
description = "A tool to generate and analyze color barcodes from video files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/shreyanbruh/moviesigdb"